# restaurant-management-odoo

./: .gitignore  README.md  odoo-ci.conf  odoo.conf  pyproject.toml
.github/workflows/: ci-cd.yml
custom_addons/restaurant_management/: .gitignore  __manifest__.py
custom_addons/restaurant_management/controllers/: __init__.py  reservation_portal.py
custom_addons/restaurant_management/data/: mail_template_data.xml  reservation_sequence.xml
custom_addons/restaurant_management/models/: __init__.py  pos_order_ext.py  restaurant_reservation.py  restaurant_table_ext.py
custom_addons/restaurant_management/security/: ir.model.access.csv  res_groups.xml
custom_addons/restaurant_management/static/description/: index.html
custom_addons/restaurant_management/static/src/js/: restaurant_dashboard.js
custom_addons/restaurant_management/static/src/scss/: restaurant.scss
custom_addons/restaurant_management/static/src/xml/: restaurant_dashboard.xml
custom_addons/restaurant_management/views/: dashboard_views.xml  kitchen_views.xml  menu.xml  pos_order_views.xml  reservation_views.xml  restaurant_table_views.xml  website_reservation_templates.xml
odoo/: amp  pyproject.toml
