[project]
name = "odoo"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "asn1crypto==1.4.0 ; python_full_version < '3.11'",
    "asn1crypto==1.5.1 ; python_full_version >= '3.11'",
    "babel==2.10.3 ; python_full_version >= '3.11' and python_full_version < '3.13'",
    "babel==2.17.0 ; python_full_version >= '3.13'",
    "babel==2.9.1 ; python_full_version < '3.11'",
    "cbor2==5.4.2.post1 ; python_full_version < '3.11'",
    "cbor2==5.4.6 ; python_full_version == '3.11.*'",
    "cbor2==5.6.2 ; python_full_version >= '3.12'",
    "chardet==4.0.0 ; python_full_version < '3.11'",
    "chardet==5.2.0 ; python_full_version >= '3.11'",
    "cryptography==3.4.8 ; python_full_version < '3.12'",
    "cryptography==42.0.8 ; python_full_version >= '3.12'",
    "docutils==0.17 ; python_full_version < '3.11'",
    "docutils==0.20.1 ; python_full_version >= '3.11'",
    "freezegun==1.1.0 ; python_full_version < '3.11'",
    "freezegun==1.2.1 ; python_full_version >= '3.11' and python_full_version < '3.13'",
    "freezegun==1.5.1 ; python_full_version >= '3.13'",
    "geoip2==2.9.0",
    "gevent==21.8.0 ; python_full_version == '3.10.*' and sys_platform != 'win32'",
    "gevent==22.10.2 ; python_full_version == '3.11.*' and sys_platform != 'win32'",
    "gevent==24.11.1 ; python_full_version >= '3.13' and sys_platform != 'win32'",
    "gevent==24.2.1 ; python_full_version == '3.12.*' and sys_platform != 'win32'",
    "greenlet==1.1.2 ; python_full_version == '3.10.*' and sys_platform != 'win32'",
    "greenlet==2.0.2 ; python_full_version == '3.11.*' and sys_platform != 'win32'",
    "greenlet==3.0.3 ; python_full_version == '3.12.*' and sys_platform != 'win32'",
    "greenlet==3.1.1 ; python_full_version == '3.13.*' and sys_platform != 'win32'",
    "greenlet==3.3.2 ; python_full_version >= '3.14' and sys_platform != 'win32'",
    "idna==2.10 ; python_full_version < '3.12'",
    "idna==3.6 ; python_full_version >= '3.12'",
    "jinja2==3.0.3 ; python_full_version < '3.11'",
    "jinja2==3.1.2 ; python_full_version >= '3.11'",
    "libsass==0.20.1 ; python_full_version < '3.11'",
    "libsass==0.22.0 ; python_full_version >= '3.11'",
    "lxml==4.8.0 ; python_full_version < '3.11'",
    "lxml==4.9.3 ; python_full_version == '3.11.*'",
    "lxml==5.2.1 ; python_full_version == '3.12.*'",
    "lxml==5.4.0 ; python_full_version == '3.13.*'",
    "lxml==6.0.2 ; python_full_version >= '3.14'",
    "lxml-html-clean>=0.4.4 ; python_full_version >= '3.12'",
    "markupsafe==2.0.1 ; python_full_version < '3.11'",
    "markupsafe==2.1.2 ; python_full_version == '3.11.*'",
    "markupsafe==2.1.5 ; python_full_version >= '3.12'",
    "num2words==0.5.10 ; python_full_version < '3.12'",
    "num2words==0.5.13 ; python_full_version >= '3.12'",
    "ofxparse==0.21",
    "openpyxl==3.0.9 ; python_full_version < '3.12'",
    "openpyxl==3.1.2 ; python_full_version >= '3.12'",
    "passlib==1.7.4",
    "pillow==10.2.0 ; python_full_version == '3.12.*'",
    "pillow==11.1.0 ; python_full_version == '3.13.*'",
    "pillow==12.1.1 ; python_full_version >= '3.14'",
    "pillow==9.0.1 ; python_full_version < '3.11'",
    "pillow==9.4.0 ; python_full_version == '3.11.*'",
    "polib==1.1.1",
    "psutil==5.9.0 ; python_full_version < '3.11'",
    "psutil==5.9.4 ; python_full_version == '3.11.*'",
    "psutil==5.9.8 ; python_full_version >= '3.12'",
    "psycopg2==2.9.10 ; python_full_version >= '3.13'",
    "psycopg2==2.9.2 ; python_full_version == '3.10.*'",
    "psycopg2==2.9.5 ; python_full_version == '3.11.*'",
    "psycopg2==2.9.9 ; python_full_version == '3.12.*'",
    "pyopenssl==21.0.0 ; python_full_version < '3.12'",
    "pyopenssl==24.1.0 ; python_full_version >= '3.12'",
    "pypdf==5.4.0 ; python_full_version >= '3.13'",
    "pypdf2==1.26.0 ; python_full_version < '3.11'",
    "pypdf2==2.12.1 ; python_full_version >= '3.11' and python_full_version < '3.13'",
    "pypiwin32>=223 ; sys_platform == 'win32'",
    "pyserial==3.5",
    "python-dateutil==2.8.1 ; python_full_version < '3.11'",
    "python-dateutil==2.8.2 ; python_full_version >= '3.11'",
    "python-ldap==3.4.0 ; python_full_version < '3.12' and sys_platform != 'win32'",
    "python-ldap==3.4.4 ; python_full_version >= '3.12' and sys_platform != 'win32'",
    "python-magic==0.4.24 ; python_full_version < '3.12' and sys_platform != 'win32'",
    "python-magic==0.4.27 ; python_full_version >= '3.12' and sys_platform != 'win32'",
    "python-stdnum==1.17 ; python_full_version < '3.11'",
    "python-stdnum==1.19 ; python_full_version >= '3.11'",
    "pytz>=2026.2",
    "pyusb==1.2.1",
    "qrcode==7.3.1 ; python_full_version < '3.11'",
    "qrcode==7.4.2 ; python_full_version >= '3.11'",
    "reportlab==3.6.12 ; python_full_version == '3.11.*'",
    "reportlab==3.6.8 ; python_full_version < '3.11'",
    "reportlab==4.1.0 ; python_full_version >= '3.12'",
    "requests==2.25.1 ; python_full_version < '3.11'",
    "requests==2.31.0 ; python_full_version >= '3.11'",
    "rjsmin==1.1.0 ; python_full_version < '3.11'",
    "rjsmin==1.2.0 ; python_full_version >= '3.11'",
    "rl-renderpm==4.0.3 ; python_full_version >= '3.12' and sys_platform == 'win32'",
    "urllib3==1.26.5 ; python_full_version < '3.12'",
    "urllib3==2.0.7 ; python_full_version >= '3.12'",
    "vobject==0.9.6.1 ; python_full_version < '3.14'",
    "vobject==0.9.9 ; python_full_version >= '3.14'",
    "werkzeug==2.0.2 ; python_full_version < '3.11'",
    "werkzeug==2.2.2 ; python_full_version == '3.11.*'",
    "werkzeug==3.0.1 ; python_full_version >= '3.12'",
    "xlrd==1.2.0 ; python_full_version < '3.12'",
    "xlrd==2.0.1 ; python_full_version >= '3.12'",
    "xlsxwriter==3.0.2 ; python_full_version < '3.12'",
    "xlsxwriter==3.1.9 ; python_full_version >= '3.12'",
    "xlwt==1.3.0",
    "zeep==4.1.0 ; python_full_version < '3.11'",
    "zeep==4.2.1 ; python_full_version >= '3.11' and python_full_version < '3.13'",
    "zeep==4.3.1 ; python_full_version >= '3.13'",
]
